remira-impl/services/prototype/monorepo/items/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
spec:
  selector:
    matchLabels:
      app: items
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
      - image: pebble/items
        imagePullPolicy: Always
        name: items
        ports:
          - containerPort: 3000
