remira-impl/services/prototype/monorepo/items/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  type: NodePort # not the default ClusterIP if using ingress controller
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: items
